--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,37 @@
-androguard
-lief
+androguard==3.3.5
+appnope==0.1.2
+asn1crypto==1.5.1
+asttokens==2.0.5
+backcall==0.2.0
+click==8.0.4
+colorama==0.4.4
+cycler==0.11.0
+decorator==5.1.1
+executing==0.8.3
+fonttools==4.30.0
+future==0.18.2
+ipython==8.1.1
+jedi==0.18.1
+kiwisolver==1.4.0
+lief==0.11.5
+lxml==4.8.0
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+networkx==2.7.1
+numpy==1.22.3
+packaging==21.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+prompt-toolkit==3.0.28
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pydot==1.4.2
+Pygments==2.11.2
+pyparsing==3.0.7
+python-dateutil==2.8.2
+six==1.16.0
+stack-data==0.2.0
+traitlets==5.1.1
+wcwidth==0.2.5
